add delete test endpoint (#406)
