# server/openapi/api.go
@@ -21,6 +21,7 @@ type ApiApiRouter interface {
 	CreateAssertion(http.ResponseWriter, *http.Request)
 	CreateTest(http.ResponseWriter, *http.Request)
 	DeleteAssertion(http.ResponseWriter, *http.Request)
+	DeleteTest(http.ResponseWriter, *http.Request)
 	GetAssertions(http.ResponseWriter, *http.Request)
 	GetTest(http.ResponseWriter, *http.Request)
 	GetTestResult(http.ResponseWriter, *http.Request)
@@ -40,6 +41,7 @@ type ApiApiServicer interface {
 	CreateAssertion(context.Context, string, Assertion) (ImplResponse, error)
 	CreateTest(context.Context, Test) (ImplResponse, error)
 	DeleteAssertion(context.Context, string, string) (ImplResponse, error)
+	DeleteTest(context.Context, string) (ImplResponse, error)
 	GetAssertions(context.Context, string) (ImplResponse, error)
 	GetTest(context.Context, string) (ImplResponse, error)
 	GetTestResult(context.Context, string, string) (ImplResponse, error)
