# server/testdb/testdb.go
@@ -12,6 +12,7 @@ var ErrNotFound = errors.New("record not found")
 type TestRepository interface {
 	CreateTest(ctx context.Context, test *openapi.Test) (string, error)
 	UpdateTest(ctx context.Context, test *openapi.Test) error
+	DeleteTest(ctx context.Context, test *openapi.Test) error
 	GetTests(ctx context.Context) ([]openapi.Test, error)
 	GetTest(ctx context.Context, id string) (*openapi.Test, error)
 }
